Bootstrap Grids Implementation
Practice using bootstrap grids through Coder Foundry!

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
     <!-- Convert this to an external style sheet -->
 
-    <link rel="stylesheet" href="https://use.typekit.net/mhj5wdi.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mhj5wdi.css" />
 
     <link href="css/site.css" rel="stylesheet" />
-
   </head>
 
   <body class="d-flex flex-column h-100 homeBG">
@@ -81,8 +80,8 @@
 
     <main class="flex-shrink-0">
       <div class="container text-center mt-5">
-            <h1 class="text-center display-1 homeText">Bootstrap Grids</h1>
-            <h3 class="text-white">An Exercise in Bootstrap Grid Layouts</h3>
+        <h1 class="text-center display-1 homeText">Bootstrap Grids</h1>
+        <h3 class="text-white">An Exercise in Bootstrap Grid Layouts</h3>
       </div>
     </main>
 
